# workshop-ETL-DUCKDB

./: .gitignore  README.md  app.py  pyproject.toml
